# migrafana

./: .gitignore  README.md  main.py  requirements.txt
.github/workflows/: python-package.yml
migrafana/: pyproject.toml
migrafana/src/: __init__.py
migrafana/src/api/: base.py  models.py
migrafana/src/cli/: context.py  flag_ref.py  main.py  utils.py
migrafana/src/cli/commands/: dashboard.py  flag_ref.py
migrafana/src/cli/commands/dashboard/: dashboard.py
migrafana/src/cli/commands/datasource/: datasource.py
migrafana/src/core/: context.py  models.py
migrafana/src/core/api/: base.py  dashboard.py  datasource.py  models.py
migrafana/src/core/journaling/: __init__.py  config.py
migrafana/src/core/json_parser/: parser.py
migrafana/src/grafana_client/: api.py  client.py  version.py
migrafana/src/grafana_client/elements/: dashboard.py
migrafana/src/json_parser/: parser.py
migrafana/tests/: test_json_parser.py
src/api/: base.py  dashboard.py  datasource.py
src/cli/: main.py
src/json_parser/: parser.py
